--- a/style/style.css
+++ b/style/style.css
@@ -16,22 +16,38 @@ main {
     margin: auto;
 }
 
-body {
+body,header {
     background: #fbfbfb;
-    height: 100vh;
-    margin: 0%;
 }
 
 header {
-    position: absolute;
-    width: 100%;
-    height: 90px;
+    position: fixed;
     padding-bottom: 20px;
-    z-index: 1;
+    box-shadow: -5px 0px 10px 5px #af599e;
+    display: flex;
 }
 
-header>p{
-    display: inline-block;
+header, footer {
+    height: 90px;
+    width:100%;
+}
+
+.nav_links a {
+    border-radius: 4px;
+    padding: 12px;
+}
+
+#logo {
+    font-weight: bold;
+    font-size: 20px;
+}
+
+section {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 #profilepic{
@@ -39,17 +55,16 @@ header>p{
     width: 400px;
 }
 
-section {
-    min-height: 100vh;
-}
-
 #contacto {
     background-color: rgba(175, 89, 158, 0.3);
     color: #0f0f0f;
+    padding: 10px 5px;
+    width:370px;
+    margin:auto;
+    border-radius: 25px;
 }
 
 footer {
-    width: 100%;
 }
 
 button, footer {
@@ -57,8 +72,8 @@ button, footer {
     color: #fbfbfb;
 }
 
-p{
-    padding: 20px 20px;
+p,h1,h2{
+    padding: 20px 35px 20px;
 }
 
 h1 {
@@ -70,8 +85,8 @@ h2 {
 }
 
 a {
-    color: #fbfbfb;
     text-decoration: none;
+    color: inherit;
 }
 
 button {
@@ -82,7 +97,7 @@ button {
     padding: 12px 28px;
 }
 
-#logos > img {
-    width: 75px;
+.icono{
+    width: 100px;
     padding: 25px;
 }
